<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="options">Options</string>
    <string name="quit">Quit</string>
    <string name="app_name">AntaresX Broadcaster</string>
    <string name="options_activity_title">Settings</string>
    <string name="warning">Turn on wifi or tethering !</string>
    <string name="streaming">Streaming !</string>
    <string name="notification_title">AntaresX Broadcaster</string>
    <string name="notification_content">AntaresX Broadcaster is running ;)</string>
    <string name="preview">Start a stream to enable the preview !</string>
    <string name="settings0">The current resolution is</string>
    <string name="settings1">The current framerate is</string>
    <string name="settings2">The current bitrate is</string>
    <string name="settings3">Sound streaming</string>
    <string name="settings4">Enable/Disable audio streaming</string>
    <string name="settings5">Audio encoder</string>
    <string name="settings6">AAC requires at least ICS</string>
    <string name="settings7">Video streaming</string>
    <string name="settings8">Enable/Disable video streaming</string>
    <string name="settings9">Video encoder</string>
    <string name="settings10">Two video compression algorithms are available: H.263 and H.264</string>
    <string name="settings11">Resolution</string>
    <string name="settings12">Framerate</string>
    <string name="settings13">Bitrate</string>
    <string name="settings14">More options</string>
    <string name="settings15">Notification</string>
    <string name="settings16">Enable/Disable the notification</string>
    <string name="settings22">Enabled</string>
    <string name="settings29">Enabled</string>
    <string name="settings40">Broadcasting</string>    
    <string name="page0">Main</string>
    <string name="page1">Preview</string>
    <string name="page2">About</string>
    
    <string name="port_used">Port already in use !</string>    
    
    <string name="bind_failed">You need to choose another port for the %s server !</string>
    <string name="start_broadcasting">Start streaming</string>
    <string name="stop_broadcasting">Stop streaming</string>
    
    <string name="screen_on">Keep screen On</string>
    <string name="screen_off">Turn screen Off</string>
    
</resources>
