<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- 

    <PreferenceCategory android:title="@string/settings3" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="stream_audio"
            android:summary="@string/settings4"
            android:title="@string/settings3" />

        <ListPreference
            android:entries="@array/audioEncoderArray"
            android:entryValues="@array/audioEncoderValues"
            android:key="audio_encoder"
            android:summary="@string/settings6"
            android:title="@string/settings5" />
    </PreferenceCategory>
    
 -->    
    <PreferenceCategory android:title="Misc" >
        <com.futureconcepts.ax.broadcaster.ui.ClickPreference
            android:key="streaming_sound"
            android:summary="Select streaming notification sound"
            android:title="Streaming sound" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings7">

        <ListPreference
            android:entries="@array/cameraSelectionArray"
            android:entryValues="@array/cameraSelectionValues"
            android:key="camera"
            android:summary="Camera"
            android:title="Camera" />

        <!-- 
        <ListPreference
            android:entries="@array/videoEncoderArray"
            android:entryValues="@array/videoEncoderValues"
            android:key="video_encoder"
            android:summary="@string/settings10"
            android:title="@string/settings9" />
        -->
        <ListPreference
            android:entries="@array/videoResolutionArray"
            android:entryValues="@array/videoResolutionArray"
            android:key="video_resolution"
            android:title="@string/settings11" />
        <ListPreference
            android:entries="@array/videoFramerateArray"
            android:entryValues="@array/videoFramerateValues"
            android:key="video_framerate"
            android:title="@string/settings12" />
        <ListPreference
            android:entries="@array/videoBitrateArray"
            android:entryValues="@array/videoBitrateValues"
            android:key="video_bitrate"
            android:title="@string/settings13" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/settings14" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notification_enabled"
            android:summary="@string/settings16"
            android:title="@string/settings15" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/settings40" >
        <EditTextPreference
            android:inputType="text"
            android:key="wowza_host_address"
            android:summary="Host Address"
            android:title="Host Address" />
        <EditTextPreference
            android:inputType="text"
            android:key="wowza_username"
            android:summary="Username"
            android:title="Username" />
        <EditTextPreference
            android:defaultValue="8086"
            android:inputType="textPassword"
            android:key="wowza_password"
            android:summary="Password"
            android:title="Password" />      
        
    </PreferenceCategory>    
    
</PreferenceScreen>